# WeddingBookingApp

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/djangoproject/: .pylintrc  requirements.txt
backend/djangoproject/api/: admin.py  models.py  schema.py  views.py
backend/djangoproject/api/migrations/: 0001_initial.py  0002_drink_image.py  0003_remove_drink_image_drinkimage.py  0004_rename_user_id_order_user_remove_drink_contents_and_more.py  0005_drink_alcohol_percentage.py  0006_rename_category_id_drink_category_and_more.py  0007_user_username.py  0008_user_groups_user_is_superuser_user_user_permissions.py  0009_drinkorder_order.py  0010_rename_order_recived_time_order_order_received_time.py
backend/djangoproject/djangoproject/: settings.py  urls.py
frontend/: .gitignore  README.md  netlify.toml  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/Contexts/: DrinkContextComponent.tsx  DrinkContextFile.tsx
frontend/src/app/api/: drinks.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/order/: page.tsx
frontend/src/components/ui/: button.tsx  drink.tsx  navbar.tsx
