[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = "A Django app for backend for the WeddingBookingApp project. Django Ninja is used to create a REST API that is communicating with the frontend"
authors = ["Fredrik <fredriksorum@hotmail.com>, Benjamin <>, Gunnar <>, Erlend <>, Aksel <>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-ninja = "^1.3.0"
django-cors-headers = "^4.4.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"